ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testingress
spec:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  ingressClassName: nginx
  tls:
    - hosts:
        - test.test.com   
      secretName: tls-secret   
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8000
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8001
